--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,33 @@
-fastapi
-uvicorn[standard]
-pydantic
-sqlalchemy
+# --- Core FastAPI stack ---
+fastapi==0.111.0
+uvicorn[standard]==0.29.0   # servidor ASGI e auto-reload
+
+# --- ORMs / DB ---
+SQLAlchemy==2.0.30
+alembic==1.13.1             # migrações
+# Se você passar para PostgreSQL depois, acrescente:
+# psycopg2-binary==2.9.9
+
+# --- Validação / Settings ---
+pydantic==2.7.1
+python-multipart==0.0.9      # upload de arquivos (necessário pelo FastAPI)
+python-dotenv==1.0.1         # carregar variáveis de ambiente a partir de .env
+
+# --- Auth / Segurança ---
+python-jose[cryptography]==3.3.0   # JWT
+passlib[bcrypt]==1.7.4             # hash de senha
+bcrypt==4.1.3                      # backend C lib para passlib
+
+# --- CORS ---
+starlette==0.37.2                  # FastAPI já puxa, mas deixo explícito
+
+# --- Desenvolvimento ---
+watchfiles==0.21.0                 # hot reload (uvicorn --reload usa)
+ipython==8.25.0                    # shell interativo opcional
+
+# --- Tipagem / utilidades ---
+typing-extensions==4.12.2
+
+# --- Testes (opcional) ---
+pytest==8.2.1
+httpx==0.27.0
