--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,11 @@
-# --- Core FastAPI stack ---
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
-
-# --- ORMs / DB ---
 SQLAlchemy==2.0.30
 alembic==1.13.1
-# psycopg2-binary==2.9.9  # opcional para PostgreSQL
-
-# --- Validação / Settings ---
 pydantic==2.7.1
 python-multipart==0.0.9
 python-dotenv==1.0.1
-
-# --- Auth / Segurança ---
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-bcrypt==3.2.0  # versão segura para Render
-
-# --- CORS ---
-# starlette==0.37.2  # opcional
-
-# --- Desenvolvimento ---
-watchfiles==0.21.0
-ipython==8.25.0
-
-# --- Tipagem / utilidades ---
+bcrypt==3.2.0
 typing-extensions==4.12.2
-
-# --- Testes (opcional) ---
-pytest==8.2.1
-httpx==0.27.0
